tests/NormalTests/paczka1/small_fuzzy/82394370.err
Error in line 7: A811 S53 19,0
Error in line 12: W4qG8t S53 474,9
